# demo-knockoff-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  FRONTEND_API_CHANGES.md  Makefile  README.md  Untitled  app.py  app.py.backup  check_env.py  cloudbuild.yaml  cv_analysis_result.md  deploy-staging.sh  presentation.md  pyproject.toml  requirements.txt  setup_test_data.py  start-local-dev.sh  test_agent_functionality.py  test_calendar.py  test_calendar_refactor.py  test_document_collection.py  test_document_collection_simple.py  test_document_verification.py  todos.md
docs/: brief.md  (+38 more)
pre_screening_v2/: agent.py  calendar_helpers.py  i18n.py  livekit.toml  make_call.py  models.py  prompts.py  pyproject.toml  refactor.md  voices.md
pre_screening_v2/agents/: alternative.py  base.py  greeting.py  open_questions.py  scheduling.py  screening.py
pre_screening_v2/examples/: 1_session_input.json  1_session_input_known_candidate.json  2_result_happy_path.json  2_result_voicemail.json
pre_screening_v2/tasks/: knockout.py  open_question.py  ready_check.py
pre_screening_v2/tests/: configs.py  conftest.py  test_edge_cases.py  test_full_flows.py  test_greeting.py  test_knockout_questions.py
pre_screening_v2/usage_logs/: console_20260228_112121.json  console_20260228_112528.json  console_20260228_112725.json  console_20260228_113023.json  console_20260228_113135.json  console_20260228_113616.json  console_20260228_113759.json  console_20260228_114432.json  console_20260228_114911.json  console_20260228_115450.json  console_20260228_115944.json  console_20260228_120058.json  console_20260228_165800.json  outbound-call-room_20260228_004202.json  outbound-call-room_20260228_012037.json  outbound-call-room_20260228_013312.json  playground-0031f2a292b9_20260301_191532.json  playground-010023a47bf2_20260301_180249.json  playground-0a271a35cb9c_20260301_182952.json  playground-0ad022487978_20260301_183922.json  playground-0ae92bcb9969_20260301_214544.json  playground-0cdaf68f60ec_20260301_192936.json  playground-19b26f8d32d9_20260301_192738.json  playground-19e41d5e42e1_20260301_194018.json  playground-19f65a8ee8bc_20260301_235554.json  playground-1IMR-htYu_20260228_151432.json  playground-1ac826cbb15d_20260301_181305.json  playground-1b6e66b0d842_20260301_234815.json  playground-1b70912c5657_20260301_185701.json  playground-1d42d592c2e2_20260301_220640.json  playground-239fc8c3195e_20260302_005639.json  (+81 more)
(+514 files in other folders)
